--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -16,11 +16,12 @@ h1 {
   background-color: #c94a40;
   color: white;
   padding: 16px;
-  margin-top: 25px;
   font-size: 16px;
   border: none;
   border-radius: 14px;
   font-family: "Open Sans", sans-serif;
+  position: relative;
+  right: 30px;
 }
 
 .menu-items {
@@ -31,6 +32,8 @@ h1 {
   min-width: 160px;
   z-index: 1;
   font-family: "Open Sans", sans-serif;
+  position: absolute;
+  right: 20px;
 }
 
 .menu-items a {
@@ -195,13 +198,13 @@ a:visited {
 .covid-tracker {
   border-radius: 10px;
   background: white;
-  /* box-shadow: 1px 1px darkgrey, -1em 0 0.9em grey; */
+  box-shadow: 1px 1px darkgrey, -1em 0 0.9em grey;
   padding: 20px;
   color: black;
   width: 500px;
   height: 100%;
   margin: 0 auto;
-  margin-top: 90px;
+  margin-top: 50px;
   text-align: center;
   display: flex;
   flex-flow: column;
@@ -249,19 +252,6 @@ a:visited {
   justify-content: space-around;
   flex-basis: 150px;
 }
-
-/*.action {
-  border-radius: 10px;
-  background: white;
-  /* box-shadow: 3px 3px darkgrey, -1em 0 0.4em grey; 
-  border: 1px solid black;
-  padding: 20px;
-  width: 500px;
-  height: 150px;
-  margin: 0 auto;
-  margin-top: 90px;
-  text-align: center;
-}*/
 
 .wash-hands {
   width: 200px;
@@ -363,10 +353,12 @@ a:visited {
 
 /*MEDIA QUERIES*/
 
-@media only screen and (max-width: 560px) {
+/* @media only screen and (max-width: 560px) { */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
   body {
     background-color: whitesmoke;
   }
+
   .navigation-button {
     margin-left: 190px;
   }
@@ -376,6 +368,12 @@ a:visited {
   }
   .logo-image {
     margin-left: auto;
+  }
+
+  .home-page-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 200px;
   }
 
   .hand-holding-heart {
@@ -407,43 +405,3 @@ a:visited {
     grid-template-columns: 1fr;
   }
 }
-
-/* COMMENTED OUT */
-
-/*.nav-bar-logo {
-  margin-top: 20px;
-}*/
-
-/* .newsUpdate {
-  display: grid;
-  grid-template-columns: 120px 150px auto 120px 40px;
-  grid-template-rows: 60% 100px auto;
-  justify-content: center;
-  background-color: rgb(5, 5, 12);
-  color: #090707;
-  box-shadow: 5px 10px #888888; 
-  border-radius: 25px;
-  font-family: "Open Sans", sans-serif;
-} */
-
-/* .welcome-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
-
-/* .welcome {
-  background-image: url("./Images/covid.jpeg"); 
-  background-size: 850px;
-  background-repeat: no-repeat; 
-  width: 100%;
-  height: 20%;
-  border: 2px solid;
-  color: pink;
-} */
-
-/*.nav-bar {
-  display: flex;
-  justify-content: space-evenly;
-}*/
