--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -353,8 +353,8 @@ a:visited {
 
 /*MEDIA QUERIES*/
 
-/* @media only screen and (max-width: 560px) { */
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+@media only screen and (max-width: 560px) {
+  /* @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) { */
   body {
     background-color: whitesmoke;
   }
