--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -376,6 +376,10 @@ a:visited {
     margin-top: 200px;
   }
 
+  .home-box {
+    margin-bottom: 100px;
+  }
+
   .hand-holding-heart {
     margin-left: 70px;
   }
