--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -373,11 +373,7 @@ a:visited {
   .home-page-container {
     display: flex;
     flex-direction: column;
-    margin-top: 200px;
-  }
-
-  .home-box {
-    margin-bottom: 100px;
+    /* margin-top: 200px; */
   }
 
   .hand-holding-heart {
