--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -359,6 +359,11 @@ a:visited {
     background-color: whitesmoke;
   }
 
+  .menu {
+    position: relative;
+    right: 100px;
+  }
+
   .navigation-button {
     margin-left: 190px;
   }
@@ -373,7 +378,7 @@ a:visited {
   .home-page-container {
     display: flex;
     flex-direction: column;
-    /* margin-top: 200px; */
+    margin-top: 200px;
   }
 
   .hand-holding-heart {
@@ -384,6 +389,10 @@ a:visited {
   }
   .volunteer-locations {
     display: flex;
+  }
+
+  .volunteer-box {
+    width: 100%;
   }
 
   .popBox {
@@ -403,5 +412,11 @@ a:visited {
     display: grid;
     width: 50px;
     grid-template-columns: 1fr;
+  }
+
+  .locations-button {
+    position: relative;
+    top: 350px;
+    left: 10px;
   }
 }
