--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -302,7 +302,7 @@ a:visited {
   width: 700px;
   height: 800px;
   margin-top: 35px;
-  position: fixed;
+  /* position: fixed; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -311,12 +311,13 @@ a:visited {
 
 .modal_content {
   background-color: white;
-  top: 50%;
+  top: 100%;
   left: 50%;
   right: auto;
   bottom: auto;
   margin-top: 320px;
   margin-right: -200px;
+  margin-left: -340px;
   transform: translate(-50%, -50%);
   height: 500px;
   width: 150px;
@@ -354,7 +355,6 @@ a:visited {
 /*MEDIA QUERIES*/
 
 @media only screen and (max-width: 560px) {
-  /* @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) { */
   body {
     background-color: whitesmoke;
   }
@@ -373,6 +373,21 @@ a:visited {
   }
   .logo-image {
     margin-left: auto;
+  }
+
+  .banner {
+    position: fixed;
+    margin-top: -30px;
+  }
+
+  .volunteer-box {
+    position: fixed;
+    margin-top: 120px;
+  }
+
+  .locations-button {
+    position: fixed;
+    margin-left: -70px;
   }
 
   .home-page-container {
@@ -414,9 +429,9 @@ a:visited {
     grid-template-columns: 1fr;
   }
 
-  .locations-button {
+  /* .locations-button {
     position: relative;
     top: 350px;
     left: 10px;
-  }
+  } */
 }
