--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -388,6 +388,7 @@ a:visited {
 
   .locations-button {
     position: fixed;
+    margin-top: 23px;
     margin-bottom: -200px;
     margin-left: -70px;
   }
@@ -399,6 +400,7 @@ a:visited {
   .volunteer-heading {
     position: fixed;
     margin-top: -37px;
+    margin-left: 10px;
     font-size: 32px;
   }
 
