--- a/src/Components/Cards/cards.css
+++ b/src/Components/Cards/cards.css
@@ -7,3 +7,13 @@
   position: relative;
   right: 50px;
 }
+
+@media only screen and (max-width: 560px) {
+  .container {
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    width: 350px;
+    margin-left: 40px;
+  }
+}
