home page responsive

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -430,7 +430,8 @@ a:visited {
   .home-page-container {
     display: flex;
     flex-direction: column;
-    margin-top: 200px;
+    margin-top: 650px;
+    height: 300px;
   }
 
   .hand-holding-heart {
