--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,4 +1,95 @@
+/*GENERAL*/
 
+body {
+  background-color: whitesmoke;
+  color: black;
+}
+
+h1 {
+  text-align: center;
+  color: black;
+  font-size: 45px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.menu {
+  background-color: #c94a40;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 14px;
+  font-family: "Open Sans", sans-serif;
+  position: relative;
+  right: 30px;
+}
+
+.menu-items {
+  display: none;
+  position: absolute;
+  border-radius: 14px;
+  background-color: brown;
+  min-width: 160px;
+  z-index: 1;
+  font-family: "Open Sans", sans-serif;
+  position: absolute;
+  right: 20px;
+}
+
+.menu-items a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.menu-items a:hover {
+  background-color: #e4e3e8;
+}
+
+.navigation-button:hover .menu-items {
+  display: block;
+}
+
+.navigation-button:hover .menu {
+  background-color: rgb(41, 33, 33);
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: wavy;
+}
+
+a:visited {
+  color: black;
+}
+
+.logo {
+  height: 50px;
+  overflow: hidden;
+  /* margin-top: -6px; */
+  z-index: 4;
+  position: fixed;
+  top: 10px;
+  left: 170px;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 /*MEDIA QUERIES*/
 
