--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -91,6 +91,70 @@ a:visited {
   cursor: pointer;
 }
 
+/*HOMEPAGE*/
+
+.logo-image {
+  margin-left: 15px;
+}
+
+.banner-home {
+  height: 150px;
+  background-color: #24222a;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 70px;
+}
+
+.home-page-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 800px;
+  margin-top: -115px;
+}
+
+.home-box-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  height: 400px;
+  border-radius: 10px;
+  background-color: #e4e3e8;
+  padding: 40px;
+  margin: 20px;
+}
+
+.home-box {
+  border-radius: 10px;
+  background: white;
+  padding: 8px;
+  width: 200px;
+  margin: 20px;
+  text-align: center;
+  font-size: 15px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.tracker-img {
+  width: 275px;
+  margin-top: 50px;
+  margin-bottom: 58px;
+}
+
+.stay-safe-img {
+  width: 250px;
+  margin-bottom: 5px;
+}
+
+.volunteer-img {
+  width: 240px;
+  margin-bottom: 50px;
+  margin-top: 25px;
+}
+
 /*MEDIA QUERIES*/
 
 @media only screen and (max-width: 560px) {
