--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -283,6 +283,85 @@ a:visited {
   margin-top: 40px;
 }
 
+/*VOLUNTEER PAGE*/
+
+.banner-heading {
+  height: 150px;
+  background-color: #24222a;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 70px;
+}
+
+#help-hands-img {
+  width: 400px;
+  margin-top: 100px;
+  margin-bottom: 200px;
+}
+
+.volunteer-pg-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.volunteer-box {
+  border-radius: 10px;
+  width: 700px;
+  height: 800px;
+  margin-top: 35px;
+  /* position: fixed; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e4e3e8;
+}
+
+.modal_content {
+  background-color: white;
+  top: 100%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-top: 320px;
+  margin-right: -200px;
+  margin-left: -340px;
+  transform: translate(-50%, -50%);
+  height: 500px;
+  width: 150px;
+  overflow: scroll;
+  padding: 20px;
+  border-radius: 5px;
+  border: 2px solid black;
+}
+
+.close {
+  color: Black;
+  float: right;
+}
+
+.close:hover {
+  color: cyan;
+  cursor: pointer;
+}
+
+.locations-button {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  width: 130px;
+  border-radius: 10px;
+  text-align: center;
+  position: absolute;
+  top: 90%;
+  left: 44%;
+  zoom: 1.5;
+}
+
 /*MEDIA QUERIES*/
 
 @media only screen and (max-width: 560px) {
