--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -356,7 +356,7 @@ a:visited {
   width: 130px;
   border-radius: 10px;
   text-align: center;
-  position: fixed;
+  position: relative;
   top: 90%;
   left: 44%;
   zoom: 1.5;
