--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -12,6 +12,10 @@ h1 {
   font-family: "Open Sans", sans-serif;
 }
 
+.covid-header{
+    padding-bottom: 50px;
+}
+
 .menu {
   background-color: #c94a40;
   color: white;
@@ -233,7 +237,7 @@ a:visited {
   justify-content: center;
   padding: 20px;
   color: black;
-  width: 1600px;
+  /* width: 1600px; */
   height: 100%;
   margin: 0 auto;
   margin-top: 15px;
@@ -358,7 +362,7 @@ a:visited {
   text-align: center;
   position: absolute;
   top: 90%;
-  left: 44%;
+  left: 43.5%;
   zoom: 1.5;
 }
 
