--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -112,11 +112,9 @@ a:visited {
 
 .home-page-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 800px;
-  margin-top: -115px;
 }
 
 .home-box-container {
@@ -373,9 +371,11 @@ a:visited {
     background-color: whitesmoke;
   }
   /* NavBar */
+ 
+
   .menu {
     position: relative;
-    right: 100px;
+    left: 1px;
   }
 
   .menu-items {
@@ -383,22 +383,20 @@ a:visited {
     right: 15px;
   }
 
-  .navigation-button {
-    margin-left: 190px;
-  }
   .dropdown {
     width: auto;
     margin-left: 10px;
   }
-  .logo-image {
+  /* .logo-image {
     margin-left: auto;
-  }
+  } */
 
   /* Volunteer Page */
   .volunteer-box {
     /* position: fixed; */
     margin-top: 20px;
     margin-left: -5px;
+    width: 140%;
   }
 
   .locations-button {
@@ -434,8 +432,7 @@ a:visited {
   .home-page-container {
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
-    height: 1500px;
+
   }
 
   .hand-holding-heart {
