--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -17,8 +17,8 @@ h1 {
 }
 
 .menu {
-  background-color: #c94a40;
-  color: white;
+  background-color: #8F403B;
+  color: whitesmoke;
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -32,7 +32,7 @@ h1 {
   display: none;
   position: absolute;
   border-radius: 14px;
-  background-color: brown;
+  background-color: #8F403B;
   min-width: 160px;
   z-index: 1;
   font-family: "Open Sans", sans-serif;
