Update hamburger menu font weight on all pages

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -24,6 +24,7 @@ h1 {
   border: none;
   border-radius: 14px;
   font-family: "Open Sans", sans-serif;
+  font-weight: bold;
   position: relative;
   right: 30px;
 }
